# aidlc-workflows

./: .gitignore  CONTRIBUTING.md  README.md  future-test-workflow.md  test-design-stage-summary.md
claude-code/: README.md  biome.json  knip.json  package.json  tsconfig.json  tsconfig.tests.json
claude-code-v2/: .gitignore  README.md
claude-code/tests/: .coverage-ratchet.json  .coverage-registry.json  README.md  gen-coverage-registry.ts  mr2-number-reconciliation.md  run-tests.sh
docs/: ASYNCHRONOUS_PLAN.md
kiro/: package.json
scripts/aidlc-codereview/: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
scripts/aidlc-codereview/config/: agent-config.yaml  review-config.yaml
scripts/aidlc-codereview/config/prompts/: business-logic-review.md  critical-findings-v1.md  structure-critique-v1.md  wrapper-generator-v1.md
scripts/aidlc-codereview/docs/: SETUP.md
scripts/aidlc-codereview/src/code_reviewer/: __init__.py  runner.py
scripts/aidlc-codereview/src/code_reviewer/agent/: __init__.py  base_agent.py  business_logic_agent.py  code_structure_agent.py  config.py  critical_findings_agent.py  models.py  preflight.py  prompt_builder.py  response_parser.py  retry.py  verification.py  wrapper_generator.py
scripts/aidlc-codereview/src/code_reviewer/common/: SEVERITY_MAPPING.md  __init__.py  cli.py  config.py  language_detector.py  models.py  output.py  report.py  spinner.py  utils.py
scripts/aidlc-codereview/src/code_reviewer/tools/: __init__.py  registry.py
scripts/aidlc-designreview/: .gitignore  LICENSE  NOTICE
scripts/aidlc-evaluator/: COMPARISON.md
src/conventions/: folder-structure.md  (+2 more)
(+490 files in other folders)
