[project]
name = "aidlc-code-reviewer"
version = "0.2.0"
description = "AIDLC Code Reviewer — automated, language-agnostic code quality analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT-0"}
authors = [
    {name = "AIDLC Team"}
]
dependencies = [
    "pyyaml>=6.0",
    "bandit>=1.7",
    "ruff>=0.4",
    "mypy>=1.0",
    "radon>=6.0",
    "vulture>=2.0",
    "semgrep>=1.0",
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "boto3>=1.35.0",
    "backoff>=2.2.0",
    "pydantic>=2.0,<3.0",
    "beautifulsoup4>=4.12",
]

[project.scripts]
aidlc-code-reviewer = "code_reviewer.common.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_reviewer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["src/code_reviewer"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
